[gd_scene load_steps=6 format=2]

[ext_resource path="res://nodes/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://nodes/Player/Camera_Follow.gd" type="Script" id=2]

[sub_resource type="CylinderMesh" id=1]

[sub_resource type="PrismMesh" id=2]

[sub_resource type="CylinderShape" id=3]

[node name="PlayerBody" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.48418, 0 )
script = ExtResource( 1 )

[node name="PlayerMesh" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="Testdirectionalindicator" type="MeshInstance" parent="PlayerMesh"]
transform = Transform( 2.65431e-14, 1.62921e-07, 1, 1, -1.62921e-07, 0, 1.62921e-07, 1, -1.62921e-07, 0, 0, 1 )
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="CameraTarget" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="CameraTarget"]
transform = Transform( -1, 1.11444e-07, -3.06191e-07, 0, 0.939693, 0.34202, 3.25841e-07, 0.34202, -0.939693, 0, 5, -10 )
script = ExtResource( 2 )

[node name="InteractionText" type="Label" parent="."]
margin_left = 0.513336
margin_right = 350.513
margin_bottom = 14.0
text = "Interaction"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InteractionRay" type="RayCast" parent="."]
transform = Transform( 5, 0, 0, 0, -1.31134e-07, 1, 0, -3, -4.37114e-08, 0, 0, 0.681226 )
enabled = true
exclude_parent = false
